--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@ permalink: /work/
                 <ul id="portfolio-contant-active">
                     <li class="mix Technology">
                       <a href="#">
-                        <img src="{{ site.baseurl }}/img/portfolio/tech2.png" alt="">
+                        <img src="/img/portfolio/tech2.png" alt="">
                         <div class="overly">
                           <div class="position-center">
                             <h2>Canaan Technology</h2>
@@ -48,7 +48,7 @@ permalink: /work/
                   </li>
                   <li class="mix Websites">
                     <a href="http://www.worldmacro.us">
-                      <img src="{{ site.baseurl }}/img/portfolio/website.png" alt="">
+                      <img src="/img/portfolio/website.png" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>World Macro</h2>
@@ -59,7 +59,7 @@ permalink: /work/
                   </li>
                   <li class="mix Trading">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/money.png" alt="">
+                      <img src="/img/portfolio/money.png" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Greenwich Harbour Capital</h2>
@@ -71,7 +71,7 @@ permalink: /work/
                   </li>
                   <li class="mix Trading">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/charts.png" alt="">
+                      <img src="/img/portfolio/charts.png" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Thoroughbred Futures Fund</h2>
@@ -82,7 +82,7 @@ permalink: /work/
                   </li>
                   <li class="mix Trading">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/city-chart.png" alt="">
+                      <img src="/img/portfolio/city-chart.png" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Marex Spectron</h2>
@@ -94,7 +94,7 @@ permalink: /work/
                   </li>
                   <li class="mix Trading">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/piegraph.png" alt="">
+                      <img src="/img/portfolio/piegraph.png" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>Citi Global Markets</h2>
@@ -105,7 +105,7 @@ permalink: /work/
                   </li>
                   <li class="mix Government">
                     <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/gavel.png" alt="">
+                      <img src="/img/portfolio/gavel.png" alt="">
                       <div class="overly">
                         <div class="position-center">
                           <h2>New York State Legislature</h2>
@@ -130,19 +130,19 @@ permalink: /work/
         <div class="block">
           <div id="clients-logo" class="owl-carousel">
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/canaan-logo1.png" alt="Features">
+              <img src="/img/clients/canaan-logo1.png" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/marex-logo1.png" alt="Features">
+              <img src="/img/clients/marex-logo1.png" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/wmlogosymbol1.png" alt="Features">
+              <img src="/img/clients/wmlogosymbol1.png" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/senate-logo.png" alt="Features">
+              <img src="/img/clients/senate-logo.png" alt="Features">
             </div>
             <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/citi-logo.png" alt="Features">
+              <img src="/img/clients/citi-logo.png" alt="Features">
             </div>
           </div>
         </div>
