added real icons

--- a/index.html
+++ b/index.html
@@ -61,42 +61,42 @@ permalink: /
     <div class="row ">
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="icon ion-coffee"></i>
+          <img class="icon" src="/img/ruby-icon.png" alt="Ruby">
           <h4>Ruby</h4>
           <p>A dynamic, open source programming language with a focus on simplicity and productivity.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-compass"></i>
+          <img class="icon" src="/img/rails-icon.png" alt="Rails">
           <h4>Rails</h4>
           <p>A full stack, web application framework optimized for sustainable programming productivity, allows writing sound code by favoring convention over configuration.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-image"></i>
+          <img class="icon" src="/img/html5-icon.png" alt="HTML5">
           <h4>HTML/CSS</h4>
           <p>Browser formatting, display, and design.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-bug"></i>
+          <img class="icon" src="/img/jquery-icon.png" alt="jQuery">
           <h4>JQuery</h4>
           <p>A cross-platform JavaScript library designed to simplify the client-side scripting of HTML.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-headphone"></i>
+          <img class="icon" src="/img/js-icon.png" alt="Javascript">
           <h4>Javascript</h4>
           <p>A high-level, dynamic, untyped, and interpreted programming language. It has been standardized in the ECMAScript language specification.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-leaf"></i>
+          <img class="icon" src="/img/angularjs-icon.png" alt="Angular">
           <h4>Angular</h4>
           <p>A complete JavaScript-based open-source front-end web application framework. The JavaScript components complement Apache Cordova, the framework used for developing cross-platform mobile apps.</p>
         </div>
@@ -111,7 +111,7 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>I design delightful digital experiences.</h2>
+          <h2>I design digital experiences, not just web apps.</h2>
           <p>Please visit my GitHub profile and judge for yourself the work and results I've achieved. I just love to build and design.</p>
           <a class="btn btn-default btn-call-to-action" href="http://github.com/abadfish" >My GitHub Profile</a>
         </div>
@@ -125,7 +125,7 @@ permalink: /
     <div class="row">
       <div class="section-title text-center">
         <h2>Fun Facts About Me</h2>
-        <p>I've got a very colored background. I prefer taking things apart and putting them back together, creating, tinkering, discovering. I can figure out how most things work through trial and error before you finish reading the directions. I can also change my own oil.<br />I've never been called lazy. In high school I was voted most likely to climb Mt. Everest.</p>
+        <p>I prefer taking things apart and putting them back together, creating, tinkering, discovering. I can figure out how most things work through trial and error before you finish reading the directions. I can also change my own oil.<br />I've never been called lazy. In high school I was voted most likely to climb Mt. Everest.</p>
       </div>
     </div>
     <div class="row">
@@ -134,33 +134,32 @@ permalink: /
           <ul class="counter-box clearfix">
             <li>
               <div class="block">
-                <i class="ion-ios-chatboxes-outline"></i>
+                <i class="ion-paper-airplane"></i>
                 <h4 class="counter">9317</h4>
-                <span>Miles from home I've been to visit my dad on a business trip</span>
+                <span>Miles from home I've been</span>
               </div>
             </li>
             <li>
               <div class="block">
-                <i class="ion-ios-glasses-outline"></i>
+                <i class="ion-model-s"></i>
                 <h4 class="counter">200</h4>
                 <span>Percent likelihood my friends are to call me if they have a flat tire</span>
               </div>
             </li>
             <li>
               <div class="block">
-                <i class="ion-ios-compose-outline"></i>
-                <h4 class="counter">2</h4>
-                <span>Times I've sailed through the Gulf Stream</span>
-              </div>
-            </li>
-            <li>
-              <div class="block">
-                <i class="ion-ios-timer-outline"></i>
+                <i class="ion-speedometer"></i>
                 <h4 class="counter">14</h4>
                 <span>How old I was when I learned to drive a horse trailer</span>
               </div>
             </li>
-
+            <li>
+              <div class="block">
+                <i class="ion-heart"></i>
+                <h4 class="counter">0</h4>
+                <span>Regrets about learning to code</span>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
@@ -171,7 +170,7 @@ permalink: /
 
                 <div class="user">
                   <img src="img/head-shot.png" alt="Me">
-                  <p><span></span> Nick Turner Studio</p>
+                  <p><span></span> Photo: Nick Turner Studio</p>
                 </div>
             </div>
           </div>
