fixed html logo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ permalink: /
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <img class="icon" src="/img/html5-icon.png" alt="HTML5">
+          <img class="icon" src="/img/html5-logo.png" alt="HTML5">
           <h4>HTML/CSS</h4>
           <p>Browser formatting, display, and design.</p>
         </div>
