changed head shot

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ permalink: /
             <div>
 
                 <div class="user">
-                  <img src="img/head-shot.png" alt="Me">
+                  <img src="img/headshot1.png" alt="Me">
                   <p><span></span> Photo: Nick Turner Studio</p>
                 </div>
             </div>
