fixed a few typos

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@ permalink: /contact/
               <i class="fa fa-map-marker"></i>Stamford, CT
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email: kirsten.ofarrell@mail.com
+              <i class="fa fa-envelope-o"></i>Email: kirsten.ofarrell@gmail.com
             </li>
             <li>
               <i class="fa fa-phone"></i>Phone: (917) 763 0590
