--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ permalink: /
         <div class="block">
           <div class="section-title">
             <h2>About Me</h2>
-            <p>From a small horse town in upstate NY, an every growing curiosity for the world took me to places I never knew existed, but it's the world of machines that fascinates me the most.</p>
+            <p>Coming from a small horse town in upstate NY, an ever growing curiosity for the world took me to places I never knew existed, but it's the world of machines that fascinates me the most.</p>
           </div>
           <p>Full-stack-educated at The Flatiron School in New York, NY, and formal Bachelor of Business Administration from Hoftra University in Hempstead, NY. Before finding software development as a passion, I had a ten year professional career in trading for a large broker-dealer and a few funds. I've been at an IT company called Canaan Technology in Norwalk, CT for a little over a year while a student at The Flatiron School. I've written a couple of my own trading algorithms as well as done some freelance web design. </p>
         </div>
