added sql to stack

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ permalink: /
         <div class="service-item">
           <img class="icon" src="/img/html5-logo.png" alt="HTML5">
           <h4>HTML/CSS</h4>
-          <p>Browser formatting, display, and design.</p>
+          <p>The building blocks and constructors of browser formatting, display, and design that we send and receive in communication with the server side.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
@@ -99,6 +99,13 @@ permalink: /
           <img class="icon" src="/img/angularjs-icon.png" alt="Angular">
           <h4>Angular</h4>
           <p>A complete JavaScript-based open-source front-end web application framework. The JavaScript components complement Apache Cordova, the framework used for developing cross-platform mobile apps.</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <img class="icon" src="/img/postgresql-icon.png" alt="PostgreSQL">
+          <h4>SQL</h4>
+          <p>The data definition language, data manipulation language, and data control language that we use to manage data held in a relational database management system (RDMBS).</p>
         </div>
       </div>
 
