added more info to stack

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ permalink: /
         <div class="service-item">
           <img class="icon" src="/img/ruby-icon.png" alt="Ruby">
           <h4>Ruby</h4>
-          <p>A dynamic, open source programming language with a focus on simplicity and productivity.</p>
+          <p>A dynamic, open source programming language with a focus on simplicity and productivity. It supports multiple programming paradigms, including functional, object-oriented, and imperative.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
@@ -84,7 +84,7 @@ permalink: /
         <div class="service-item">
           <img class="icon" src="/img/jquery-icon.png" alt="jQuery">
           <h4>JQuery</h4>
-          <p>A cross-platform JavaScript library designed to simplify the client-side scripting of HTML.</p>
+          <p>A cross-platform JavaScript library designed to simplify the client-side scripting of HTML. The most popular Javascript library in use today with over 65% of the top 10 million highest-trafficked sites on the Web.</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
