--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@ permalink: /contact/
 <section id="contact-form">
   <div class="container">
     <div class="row">
-    
+
     <div id="contact-box" class="row">
-      <div class="col-md-6 col-sm-12">
+      <div class="col-md-12 text-center">
         <div class="block">
           <ul class="address-block">
             <li>
