began angular project blog post

--- a/index.html
+++ b/index.html
@@ -174,9 +174,8 @@ permalink: /
         <div class="testimonial-carousel">
           <div id="testimonial-slider" class="owl-carousel">
             <div>
-
                 <div class="user">
-                  <img src="img/head-shot2.png" alt="Me">
+                  <img src="img/headshot.png" alt="Me">
                   <p><span></span> Photo: Nick Turner Studio</p>
                 </div>
             </div>
