finished angular post

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ permalink: /
           <div id="testimonial-slider" class="owl-carousel">
             <div>
                 <div class="user">
-                  <img src="img/headshot.png" alt="Me">
+                  <img src="img/head-shot2.png" alt="Me">
                   <p><span></span> Photo: Nick Turner Studio</p>
                 </div>
             </div>
