added link to download resume

--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@ permalink: /work/
                     </a>
                   </li>
                   <li class="mix Trading">
-                    <a href="#">
+                    <a href="">
                       <img src="/img/portfolio/money.png" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -70,7 +70,7 @@ permalink: /work/
                     </a>
                   </li>
                   <li class="mix Trading">
-                    <a href="#">
+                    <a href="">
                       <img src="/img/portfolio/charts.png" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -81,7 +81,7 @@ permalink: /work/
                     </a>
                   </li>
                   <li class="mix Trading">
-                    <a href="#">
+                    <a href="">
                       <img src="/img/portfolio/city-chart.png" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -93,7 +93,7 @@ permalink: /work/
                     </a>
                   </li>
                   <li class="mix Trading">
-                    <a href="#">
+                    <a href="">
                       <img src="/img/portfolio/piegraph.png" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -104,7 +104,7 @@ permalink: /work/
                     </a>
                   </li>
                   <li class="mix Government">
-                    <a href="#">
+                    <a href="">
                       <img src="/img/portfolio/gavel.png" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -121,7 +121,9 @@ permalink: /work/
         </div>
     </div>
 </section>
-
+<section class="col-md-12 text-center">
+    <h2><a class="btn btn-lg" href="http://www.kirstenofarrell.com/assets/Kirsten_OFarrell_CV.pdf" target="_blank">Download PDF</a></h2>
+</section>
 <!-- Clients Logo Section Start -->
 <section id="clients-logo-section">
   <div class="container">
