added button to download resume

--- a/work.html
+++ b/work.html
@@ -122,8 +122,10 @@ permalink: /work/
     </div>
 </section>
 <section class="col-md-12 text-center">
-    <h2><a class="btn btn-lg" href="http://www.kirstenofarrell.com/assets/Kirsten_OFarrell_CV.pdf" target="_blank">Download PDF</a></h2>
+    <a class="btn btn-danger" href="http://www.kirstenofarrell.com/assets/Kirsten_OFarrell_CV.pdf" target="_blank">Download PDF</a>
 </section>
+<br />
+<br />
 <!-- Clients Logo Section Start -->
 <section id="clients-logo-section">
   <div class="container">
